# cleanbox

./: .env.example  .env.production  .flake8  .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CleanBox.spec  Dockerfile  README.md  RESCUE-STATE.md  build_local.py  installer.nsi  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.rune/: conventions.md  decisions.md  design-system.md  plan-audit-remediation-phase1.md  plan-audit-remediation-phase2.md  plan-audit-remediation-phase3.md  plan-audit-remediation-phase4.md  plan-audit-remediation-phase5.md  plan-audit-remediation-phase6.md  plan-audit-remediation.md  progress.md  rescue-session-bridge.json  session-log.md
.rune/deploy/: rollback-1.0.18.md
.rune/journal/: audit-2026-03-22.md  remediation-progress-2026-03-22.md
.tmp-pytest/pytest-of-anhbi/: pytest-current
docs/: API.md  README.md  ROLLBACK.md  requirements.md
docs/Risk/: 01-Risk-Matrix.md  02-SW-FMEA.md  03-FTA.md  04-ETA.md  05-Bow-Tie.md  06-HAZOP.md  07-STPA.md  08-DRBFM.md
docs/business-analysis/: README.md  business_analysis_v1.md  business_analysis_v2.md  business_analysis_v3.md  business_analysis_v4.md  business_analysis_v5.md
docs/technical-analysis/: README.md  technical_analysis_v1.md  technical_analysis_v2.md  technical_analysis_v3.md  technical_analysis_v4.md  technical_analysis_v5.md
quality/: __init__.py  analyze_coverage.py  config.py  quality_evaluator.py  rescue_autopsy.py  rescue_autopsy_runner.py  verify_fixes.py  verify_release.py
quality/evaluators/: __init__.py  compatibility.py  functional_suitability.py  maintainability.py  performance_efficiency.py  portability.py  reliability.py  security.py  usability.py
quality/reports/: .gitkeep  bandit_live.json  preflight_flake8_report.txt  quality_report.json  quality_report.md  rescue_autopsy.json  rescue_autopsy.md  rescue_autopsy_final.baseline-53_94.locked.json  rescue_autopsy_final.baseline-53_94.locked.md  rescue_autopsy_final.json  rescue_autopsy_final.md  rescue_autopsy_live.json  rescue_autopsy_live.md  rescue_bandit.json  rescue_bandit_final.json  rescue_coverage.json  rescue_coverage_final.json  rescue_dependency.json  rescue_radon.json  rescue_radon_final.json  rescue_radon_live.json
src/: __init__.py  app.py  app_cleanup.py  app_single_instance.py  main.py
src/features/: __init__.py
src/shared/: config_defaults.py  config_io.py  constants.py  constants_assets.py  elevation.py  elevation_args.py  execution.py  protected_paths.py  registry.py  registry_tasks.py  utils.py
src/ui/: __init__.py  main_window.py  tray_icon.py
tests/: conftest.py
tests/characterization/: test_rescue_safety_net.py
tests/component/: __init__.py  test_component_edge_cases.py  test_ui_components.py
tests/e2e/: __init__.py  test_business_requirements.py  test_nfr_user_stories.py  test_ui_elements.py  test_ui_implicit.py  test_use_cases.py
tests/integration/: __init__.py  test_additional_integration.py  test_app_integration.py
tests/reports/: test_report.md
tests/ui/: test_structure.py
tests/unit/: __init__.py  test_app_additional_paths.py  test_app_complex_flows.py  test_app_coverage_final.py  test_cleanup_module_complete.py  test_cleanup_policy.py  test_cleanup_service_edge_paths.py  test_config_io_defaults.py  test_config_manager_edge_cases.py  test_config_registry_complete.py  test_config_schema.py  test_constants.py  test_core_functions.py  test_coverage_boost.py  test_directory_detector_coverage.py  test_elevation_args.py  test_features_scanner.py  test_folder_scanner_coverage.py  test_folder_scanner_edge_paths.py  test_folder_scanner_parallel_executor.py  test_folder_scanner_realtime.py  test_folder_scanner_size_walker.py  test_main_entry.py  test_notifications_coverage.py  test_registry_comprehensive.py  test_registry_tasks.py  test_remaining_coverage.py  test_settings_view_coverage.py  test_settings_view_styles.py  test_shared_extracted_modules.py  test_shared_utils.py  test_storage_monitor_coverage.py  test_storage_monitor_polling.py  test_storage_utils_coverage.py  (+12 more)
(+67 files in other folders)
