[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanbox"
version = "1.0.19"
description = "Windows disk cleanup utility with system tray integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CleanBox Team"}
]
keywords = ["disk", "cleanup", "windows", "utility", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.10.2",
    "pystray>=0.19.0",
    "Pillow>=12.1.1",
    "win11toast>=0.36.3",
    "psutil>=7.2.2",
    "winshell>=0.6",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=7.1.0",
    "coverage>=7.13.5",
    "flake8>=6.0.0",
    "bandit>=1.9.4",
    "radon>=5.0.0",
    "autopep8>=2.0.0",
]

[project.scripts]
cleanbox = "main:main"

[project.gui-scripts]
cleanbox-gui = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.flake8]
max-line-length = 120
exclude = [".venv", "__pycache__", ".git", ".pytest_cache"]
per-file-ignores = [
    "tests/*.py:E128,E301,E305,E306,E402,E501,E702,E712,E731,F401,F811,F841",
    "tests/**/*.py:E128,E301,E305,E306,E402,E501,E702,E712,E731,F401,F811,F841",
]
